# ROS2_CoT-VLA

./: README.md
cot_vision_ros2/: package.xml  setup.cfg  setup.py
cot_vision_ros2/cot_vision_ros2/: camera_geom.py  cot_action_executor.py  cot_llava_node.py  cot_model.py  license_plate_reader.py  speech_feedback.py  tf_utils.py  vision_cot_node.py
cot_vision_ros2/launch/: vision_cot_bringup.launch.py
smartfuel_core/: package.xml  setup.cfg  setup.py
smartfuel_core/smartfuel_core/: gripper_drl_controller.py  motion_controller.py  server.py  vision_webcam_node.py
