<package format="3">
  <name>smartfuel_core</name>
  <version>0.1.0</version>
  <description>SmartFuel Core: integrated control and vision system</description>
  <maintainer email="your@email.com">df</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>cv_bridge</depend>
  <depend>doosan-robot2</depend>

  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-ultralytics</exec_depend>
  <exec_depend>python3-fastapi</exec_depend>
  <exec_depend>python3-uvicorn</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
